baml_language/crates/baml_tests/snapshots/compiles/json_cross_namespace_static_call/baml_tests__compiles__json_cross_namespace_static_call__01_lexer__main.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Multi-segment"
Word "receiver"
Word "with"
Word "type-args"
Word "on"
Word "a"
Word "static"
Word "method"
Word "call"
Dot "."
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "Generic"
Class "class"
Error "`"
Word "Box"
Less "<"
Word "T"
Greater ">"
Error "`"
Word "lives"
In "in"
Word "nested"
Word "namespace"
Error "`"
Word "pkg"
Dot "."
Word "inner"
Error "`"
Dot "."
Slash "/"
Slash "/"
Error "`"
Word "root"
Dot "."
Word "pkg"
Dot "."
Word "inner"
Dot "."
Word "Box"
Less "<"
Word "int"
Greater ">"
Dot "."
Word "from_json"
LParen "("
Word "j"
RParen ")"
Error "`"
Word "resolves"
Word "through"
Word "cross-namespace"
Slash "/"
Slash "/"
Word "path-based"
Word "lookup"
Word "AND"
Word "threads"
Word "the"
Word "receiver"
Error "'"
Word "s"
Word "type-arg"
Error "`"
Less "<"
Word "int"
Greater ">"
Error "`"
Word "into"
Word "the"
Slash "/"
Slash "/"
Word "user-defined"
Error "`"
Word "Box"
Dot "."
Word "from_json"
Error "`"
Word "frame"
Error "—"
Word "the"
Word "static-method"
Word "counterpart"
Word "to"
Slash "/"
Slash "/"
Word "the"
Word "instance-method"
Word "type-arg"
Word "threading"
Word "exercised"
Word "by"
Slash "/"
Slash "/"
Error "`"
Word "class_type_args_at_runtime"
Dot "."
Word "rs"
Error "`"
Dot "."
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "Compiles-tier"
Word "fixture"
Colon ":"
Word "zero"
Word "diagnostics"
Plus "+"
Word "bytecode"
Word "snapshot"
Word "prove"
Word "the"
Slash "/"
Slash "/"
Word "resolution"
Word "worked"
Dot "."
Word "Regression"
Test "test"
For "for"
Word "the"
Error "`"
Word "Expr"
DoubleColon "::"
Word "MemberAccess"
Error "`"
Slash "/"
Slash "/"
Error "`"
Word "base_is_value"
Error "`"
Word "heuristic"
In "in"
Error "`"
Word "builder"
Dot "."
Word "rs"
Error "`"
Colon ":"
Word "a"
Word "multi-segment"
Error "`"
Word "Path"
Error "`"
Word "whose"
Slash "/"
Slash "/"
Word "root"
Word "is"
Word "not"
Word "a"
Word "local"
Word "variable"
Word "must"
Word "be"
Word "treated"
Word "as"
Word "a"
Word "type"
Word "name"
LParen "("
Word "unbound"
Slash "/"
Slash "/"
Word "static"
Word "method"
RParen ")"
Comma ","
Word "not"
Word "as"
Word "a"
Word "value"
LParen "("
Word "bound"
Word "instance"
Word "method"
RParen ")"
Error "—"
Word "otherwise"
Word "the"
Slash "/"
Slash "/"
Word "receiver"
Error "'"
Word "s"
Word "class-level"
Word "type-args"
Word "are"
Word "misinterpreted"
Word "as"
Word "method-level"
Slash "/"
Slash "/"
Word "type-args"
Word "of"
Word "the"
Word "static"
Word "callee"
Comma ","
Word "producing"
Slash "/"
Slash "/"
Quote "\""
Function "function"
Error "`"
Word "from_json"
Error "`"
Word "expects"
IntegerLiteral "0"
Word "type"
Word "argument"
LParen "("
Word "s"
RParen ")"
Comma ","
Word "got"
IntegerLiteral "1"
Quote "\""
Dot "."
Function "function"
Word "decode_root"
LParen "("
Word "j"
Colon ":"
Word "baml"
Dot "."
Word "json"
Dot "."
Word "json"
RParen ")"
Arrow "->"
Word "root"
Dot "."
Word "pkg"
Dot "."
Word "inner"
Dot "."
Word "Box"
Less "<"
Word "int"
Greater ">"
Throws "throws"
Word "baml"
Dot "."
Word "json"
Dot "."
Word "JsonParseError"
Pipe "|"
Word "baml"
Dot "."
Word "json"
Dot "."
Word "JsonDecodeError"
LBrace "{"
Word "root"
Dot "."
Word "pkg"
Dot "."
Word "inner"
Dot "."
Word "Box"
Less "<"
Word "int"
Greater ">"
Dot "."
Word "from_json"
LParen "("
Word "j"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Auto-derived"
Word "counterpart"
Colon ":"
Error "`"
Word "AutoBox"
Less "<"
Word "T"
Greater ">"
Error "`"
Word "has"
Word "no"
Word "user"
Error "`"
Word "from_json"
Error "`"
Comma ","
Word "so"
Word "this"
Slash "/"
Slash "/"
Word "call"
Word "must"
Word "resolve"
Word "to"
Word "the"
Word "synthesized"
Error "`"
Word "AutoBox"
Dot "."
Word "from_json"
Error "`"
Word "and"
Word "still"
Word "thread"
Slash "/"
Slash "/"
Word "the"
Word "receiver"
Error "'"
Word "s"
Error "`"
Less "<"
Word "int"
Greater ">"
Error "`"
Word "through"
Word "the"
Word "synthesizer"
Error "'"
Word "s"
Word "frame"
Dot "."
Function "function"
Word "decode_auto"
LParen "("
Word "j"
Colon ":"
Word "baml"
Dot "."
Word "json"
Dot "."
Word "json"
RParen ")"
Arrow "->"
Word "root"
Dot "."
Word "pkg"
Dot "."
Word "inner"
Dot "."
Word "AutoBox"
Less "<"
Word "int"
Greater ">"
Throws "throws"
Word "baml"
Dot "."
Word "json"
Dot "."
Word "JsonParseError"
Pipe "|"
Word "baml"
Dot "."
Word "json"
Dot "."
Word "JsonDecodeError"
LBrace "{"
Word "root"
Dot "."
Word "pkg"
Dot "."
Word "inner"
Dot "."
Word "AutoBox"
Less "<"
Word "int"
Greater ">"
Dot "."
Word "from_json"
LParen "("
Word "j"
RParen ")"
RBrace "}"
