baml_language/crates/baml_tests/snapshots/compiles/json_cross_namespace_static_call/baml_tests__compiles__json_cross_namespace_static_call__01_lexer__ns_pkg_ns_inner_box.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Generic"
Class "class"
Backtick "`"
Word "Box"
Less "<"
Word "T"
Greater ">"
Backtick "`"
In "in"
Word "nested"
Word "namespace"
Backtick "`"
Word "pkg"
Dot "."
Word "inner"
Backtick "`"
Comma ","
Word "referenced"
Word "from"
Slash "/"
Slash "/"
Word "the"
Word "root"
Word "namespace"
Word "via"
Backtick "`"
Word "root"
Dot "."
Word "pkg"
Dot "."
Word "inner"
Dot "."
Word "Box"
Less "<"
DotDotDot "..."
Greater ">"
Backtick "`"
Dot "."
Word "Defines"
Word "a"
Word "per-field"
Slash "/"
Slash "/"
Word "auto-derive-shaped"
Backtick "`"
Word "from_json"
Backtick "`"
Word "so"
Word "the"
Word "static-method"
Word "receiver"
Word "path"
Word "has"
Slash "/"
Slash "/"
Word "something"
Word "to"
Word "dispatch"
Word "to"
Dot "."
Class "class"
Word "Box"
Less "<"
Word "T"
Greater ">"
LBrace "{"
Word "value"
Word "T"
Function "function"
Word "from_json"
LParen "("
Word "j"
Colon ":"
Word "baml"
Dot "."
Word "json"
Dot "."
Word "json"
RParen ")"
Arrow "->"
Word "Box"
Less "<"
Word "T"
Greater ">"
Throws "throws"
Word "baml"
Dot "."
Word "json"
Dot "."
Word "JsonParseError"
Pipe "|"
Word "baml"
Dot "."
Word "json"
Dot "."
Word "JsonDecodeError"
LBrace "{"
Word "Box"
Less "<"
Word "T"
Greater ">"
LBrace "{"
Word "value"
Colon ":"
Word "baml"
Dot "."
Word "json"
Dot "."
Word "from_json"
Less "<"
Word "T"
Greater ">"
LParen "("
Word "baml"
Dot "."
Word "json"
Dot "."
Word "field"
LParen "("
Word "j"
Comma ","
Quote "\""
Word "value"
Quote "\""
RParen ")"
RParen ")"
RBrace "}"
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Same"
Word "shape"
Word "as"
Backtick "`"
Word "Box"
Less "<"
Word "T"
Greater ">"
Backtick "`"
Word "but"
Word "with"
Word "NO"
Word "user"
Backtick "`"
Word "from_json"
Backtick "`"
Comma ","
Word "so"
Word "the"
Word "multi-segment"
Slash "/"
Slash "/"
Word "static"
Word "call"
Word "dispatches"
Word "to"
Word "the"
Word "AUTO-DERIVED"
Backtick "`"
Word "from_json"
Backtick "`"
Word "body"
Word "emitted"
Word "by"
Slash "/"
Slash "/"
Backtick "`"
Word "auto_derive_json"
Backtick "`"
Dot "."
Word "Confirms"
Word "the"
Word "cross-namespace"
Plus "+"
Word "receiver-type-arg"
Slash "/"
Slash "/"
Word "fix"
LParen "("
Backtick "`"
Word "builder"
Dot "."
Word "rs"
Backtick "`"
Backtick "`"
Word "Expr"
DoubleColon "::"
Word "MemberAccess"
Backtick "`"
Backtick "`"
Word "base_is_value"
Backtick "`"
Word "heuristic"
RParen ")"
Word "flows"
Slash "/"
Slash "/"
Word "the"
Word "receiver"
Error "'"
Word "s"
Backtick "`"
Less "<"
Word "T"
Greater ">"
Backtick "`"
Word "through"
Word "the"
Word "synthesizer"
Error "'"
Word "s"
Word "frame"
Word "as"
Word "well"
Dot "."
Class "class"
Word "AutoBox"
Less "<"
Word "T"
Greater ">"
LBrace "{"
Word "value"
Word "T"
RBrace "}"
